<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawerhunt_1"
            android:icon="@drawable/icon_enigma"
            android:title="@string/drawerhunt1"
            android:orientation="vertical"
            android:checked="true" />

        <item
            android:id="@+id/drawerhunt_2"
            android:icon="@drawable/icon_enigma"
            android:orientation="vertical"
            android:title="@string/drawerhunt2" />
        <item
            android:id="@+id/drawerhunt_3"
            android:icon="@drawable/icon_enigma"
            android:orientation="vertical"
            android:title="@string/drawerhunt3" />
    </group>

</menu>