<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GeoGroupActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/activity_main_searching_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="16dp"
        android:padding="25dp"
        android:text="@string/geogroupe_text"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="31dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="375dp"
        android:layout_height="250dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_searching_txt"
        app:srcCompat="@android:drawable/ic_dialog_info"
        tools:ignore="MissingConstraints,VectorDrawableCompat"
        tools:layout_editor_absoluteX="18dp" />

    <TextView
        android:id="@+id/activity_main_explication_txt"
        android:layout_width="394dp"
        android:layout_height="152dp"
        android:layout_margin="10dp"
        android:layout_marginBottom="4dp"
        android:padding="20dp"
        android:text="@string/geogroupe_explication"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/activity_main_greeting_txt"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/activity_main_greeting_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="12dp"
        android:padding="20dp"
        android:text="@string/geogroup_distance"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/activity_main_play_btn"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="24dp" />

    <Button
        android:id="@+id/activity_main_play_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:padding="30dp"
        android:text="@string/geogroup_button"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="96dp" />

</androidx.constraintlayout.widget.ConstraintLayout>